Added tabs and working map

--- a/WebSolution/styles.css
+++ b/WebSolution/styles.css
@@ -1,3 +1,62 @@
 #mapid { height: 180px; }
 body { margin:0; padding:0; width:100%; height:100%; background: #ffffff; }
 #map { position:absolute; top:0; bottom:0; width:100%; z-index: 1; }
+#menu {
+    position: absolute;
+    width:100vw;
+    height:100vh;
+    background-color: rgba(255,255,255, 1);
+    z-index: 30;
+    display: block;
+}
+.close_tr {
+    color: black;
+    position: absolute;
+    top: 0.5vh;
+    right: 13vw;
+    font-size: 4.5vw;
+    font-weight: bold;
+  }
+  
+  .close_tr:hover,
+  .close_tr:focus {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .cursor {
+    cursor: pointer;
+  }
+
+  .navbar {
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+  
+  .navbar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .navbar a:hover {
+    background: #f1f1f1;
+    color: black;
+  }
+  
+  .navbar a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+
+  .tabcontent{
+    display: none;
+  }
