--- a/WebSolution/styles.css
+++ b/WebSolution/styles.css
@@ -8,13 +8,14 @@ body { margin:0; padding:0; width:100%; height:100%; background: #ffffff; }
     background-color: rgba(255,255,255, 1);
     z-index: 30;
     display: block;
+    top:0;
 }
 .close_tr {
     color: black;
     position: absolute;
-    top: 0.5vh;
-    right: 13vw;
-    font-size: 4.5vw;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
     font-weight: bold;
   }
   
@@ -59,4 +60,44 @@ body { margin:0; padding:0; width:100%; height:100%; background: #ffffff; }
 
   .tabcontent{
     display: none;
+  }
+
+  input[type=text],select, textarea{
+    width: 80%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    margin-left: 6px;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    resize: vertical;
+  }
+
+  /* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 25%;
+    padding: 10px;
+  }
+  
+  .column img {
+    margin-top: 12px;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .border{
+     margin: 5px;
+  }
+
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
   }
